add index.html and css files

--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>tayler's first website!</title>
+    <title>tayler's whimsy website!</title>
+    <link rel="stylesheet" href="style.css"
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      
+      <nav>
+        <h1>🌟tayler's blog🌟</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-li">
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+
+          </li>
+        </ul>
+      </nav>
+
+      <main>
+        <!-- Sidebar Section: has butterfly banner, -->
+        <div class="sidebar">
+          <img class="sidebar" src ="https://dl.glitter-graphics.com/pub/3273/3273482xmfsi896gm.png"
+        </div>
+        <!-- Content Section -->
+        
+        <div class="content">
+          <h2>tayler!!<3</h2>
+          <p>Jesus-lover/class president</p>
+          <!--interests section of content-->
+          <div id="interests">
+            <h3>Interests🦢</h3>
+            <ul>
+              <li>reading the bible✝️</li>
+              <li>playing guitar🎸</li>
+              <li>baking for friends and family🍪</li>
+              <li>window shopping👗🛍️</li>
+            </ul>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
