add index.html and css files

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <main>
         <!-- Sidebar Section: has butterfly banner, -->
         <div class="sidebar">
-          <img class="sidebar" src ="https://dl.glitter-graphics.com/pub/3273/3273482xmfsi896gm.png"
-        </div>
-        <!-- Content Section -->
+          <img class="sidebar" src ="https://dl.glitter-graphics.com/pub/3273/3273482xmfsi896gm.png" width ="350"
+        
+          <!-- Content Section -->
         
         <div class="content">
           <h2>tayler!!<3</h2>
