--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -33,7 +33,9 @@
 	<div class="box">?</div>
 
 	<script>
-		(function () {
+		(function ()
+
+		{
 			'use strict'
 			/* global jQuery */
 
@@ -66,7 +68,9 @@
 			//////////////////////////////////////////////////////////////////
 
 			// TODO 2 - Variable declarations 
-
+			var positionX = 0; 
+			var points = 0 
+			var speed = 10 
 
 
 			/* 
@@ -75,8 +79,14 @@
 			turn it around! 
 			*/
 			function update() {
-
-
+				moveBoxTo(positionX); //moves box
+				positionX = positionX + speed; 
+				if(positionX > boardWidth){
+					speed = speed * -1;
+				}
+			else if (positionX < 0){
+				speed *= -1;
+			}
 			};
 
 			/* 
@@ -85,6 +95,10 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
+				positionX = 0
+				points = points + 1
+				changeBoxText(points)
+				speed = 3 * points + 10; 
 
 
 			};
