completed bouncing box project

--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -7,11 +7,11 @@
 	<script src="jquery.min.js"></script>
 	<style>
 		.box {
-			width: 70px;
-			height: 70px;
-			background-color: teal;
+			width: 180px;
+			height: 180px;
+			background-image: url("https://static.vecteezy.com/system/resources/thumbnails/054/123/646/small/a-clear-transparent-soap-bubble-floating-against-a-simple-background-png.png");
 			font-size: 300%;
-			text-align: center;
+			text-align: center;"
 			user-select: none;
 			display: block;
 			position: absolute;
