--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -7,21 +7,27 @@
 	<script src="jquery.min.js"></script>
 	<style>
 		.box {
-			width: 180px;
-			height: 180px;
-			background-image: url("https://static.vecteezy.com/system/resources/thumbnails/054/123/646/small/a-clear-transparent-soap-bubble-floating-against-a-simple-background-png.png");
-			font-size: 300%;
+			width: 170px;
+			height: 170px;
+			background-image: url("https://static.vecteezy.com/system/resources/previews/047/073/782/non_2x/cute-flower-drawing-free-png.png");
+			background-size: contain; 
+			object-fit: cover; 
+			font-size: 250%;
 			text-align: center;"
 			user-select: none;
-			display: block;
+			display: circle;
 			position: absolute;
-			top: 100px;
+			
+			top: 10px; left: 100px
+
 			/* Change me! */
-			left: 0px;
+			
 		}
 
 		.board {
-			height: 100vh;
+			height: 0vh;
+			background-image: url("https://img.freepik.com/premium-photo/vertical-white-blue-stripes-gouache-vintage-background-seamless-pattern_158123-130.jpg");
+
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -71,6 +77,10 @@
 			var positionX = 0; 
 			var points = 0 
 			var speed = 10 
+			var positionY = 0;
+			var speedY = 10;
+			var boardHeight = jQuery(window).height();
+			var randNum = Math.random() * 100
 
 
 			/* 
@@ -79,7 +89,7 @@
 			turn it around! 
 			*/
 			function update() {
-				moveBoxTo(positionX); //moves box
+				moveBoxTo(positionX, positionY); //moves box
 				positionX = positionX + speed; 
 				if(positionX > boardWidth){
 					speed = speed * -1;
@@ -87,6 +97,19 @@
 			else if (positionX < 0){
 				speed *= -1;
 			}
+			box.css("left", newPositionX);
+			box.css("top", newPositionY);
+
+			positionY = positionY + 10;
+				if(positionY > boardHeight){
+					speed = speed * -1;
+				}
+			else if (positionY < boardHeight){
+				speed *= -1;
+			}
+
+			  requestAnimationFrame(updateBox);
+
 			};
 
 			/* 
@@ -99,6 +122,8 @@
 				points = points + 1
 				changeBoxText(points)
 				speed = 3 * points + 10; 
+				
+			
 
 
 			};
