--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -1,139 +1,114 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Bouncing Box</title>
+    <script src="jquery.min.js"></script>
+    <style>
+      .box {
+        width: 170px;
+        height: 170px;
+        background-image: url("https://static.vecteezy.com/system/resources/previews/047/073/782/non_2x/cute-flower-drawing-free-png.png");
+        background-size: contain;
+        object-fit: cover;
+        font-size: 250%;
+        text-align: center;
+        user-select:none;
+		display:circle;
+		position:absolute;
+		top:10px;
+		left:100px;/*Changeme!*/
+	}
+	.board{
+		height:100vh;
+		background-image:url("https://img.freepik.com/premium-photo/vertical-white-blue-stripes-gouache-vintage-background-seamless-pattern_158123-130.jpg");
+      }
+    </style>
+    <!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
+  </head>
 
-<head>
-	<meta charset="utf-8">
-	<title>Bouncing Box</title>
-	<script src="jquery.min.js"></script>
-	<style>
-		.box {
-			width: 170px;
-			height: 170px;
-			background-image: url("https://static.vecteezy.com/system/resources/previews/047/073/782/non_2x/cute-flower-drawing-free-png.png");
-			background-size: contain; 
-			object-fit: cover; 
-			font-size: 250%;
-			text-align: center;"
-			user-select: none;
-			display: circle;
-			position: absolute;
-			
-			top: 10px; left: 100px
+  <body class="board">
+    <!-- HTML for the box -->
+    <div class="box">?</div>
 
-			/* Change me! */
-			
-		}
+    <script>
+      (function () {
+        "use strict";
+        /* global jQuery */
 
-		.board {
-			height: 0vh;
-			background-image: url("https://img.freepik.com/premium-photo/vertical-white-blue-stripes-gouache-vintage-background-seamless-pattern_158123-130.jpg");
+        //////////////////////////////////////////////////////////////////
+        /////////////////// SETUP DO NOT DELETE //////////////////////////
+        //////////////////////////////////////////////////////////////////
 
-		}
-	</style>
-	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
+        var box = jQuery(".box"); // reference to the HTML .box element
+        var board = jQuery(".board"); // reference to the HTML .board element
+        var boardWidth = board.width(); // the maximum X-Coordinate of the screen
+		var boardHeight = board.height();
 
-</head>
+        // Every 50 milliseconds, call the update Function (see below)
+        setInterval(update, 50);
 
-<body class="board">
-	<!-- HTML for the box -->
-	<div class="box">?</div>
+        // Every time the box is clicked, call the handleBoxClick Function (see below)
+        box.on("click", handleBoxClick);
 
-	<script>
-		(function ()
+        // moves the Box to a new position on the screen along the X-Axis
+        function moveBoxTo(newPositionX, newPositionY) {
+          box.css("left", newPositionX);
+          box.css("top", newPositionY);
+        }
 
-		{
-			'use strict'
-			/* global jQuery */
+        // changes the text displayed on the Box
+        function changeBoxText(newText) {
+          box.text(newText);
+        }
 
-			//////////////////////////////////////////////////////////////////
-			/////////////////// SETUP DO NOT DELETE //////////////////////////
-			//////////////////////////////////////////////////////////////////
+        //////////////////////////////////////////////////////////////////
+        /////////////////// YOUR CODE BELOW HERE /////////////////////////
+        //////////////////////////////////////////////////////////////////
 
-			var box = jQuery('.box');	// reference to the HTML .box element
-			var board = jQuery('.board');	// reference to the HTML .board element
-			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
+        // TODO 2 - Variable declarations
+        var positionX = 0;
+        var points = 0;
+        var speed = 10;
+        var positionY = 0;
+        var speedY = 10;
+        //var boardHeight = jQuery(window).height(); 
+        var randNum = Math.random() * 100;
 
-			// Every 50 milliseconds, call the update Function (see below)
-			setInterval(update, 50);
-
-			// Every time the box is clicked, call the handleBoxClick Function (see below)
-			box.on('click', handleBoxClick);
-
-			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
-				box.css("left", newPositionX);
-			}
-
-			// changes the text displayed on the Box
-			function changeBoxText(newText) {
-				box.text(newText);
-			}
-
-			//////////////////////////////////////////////////////////////////
-			/////////////////// YOUR CODE BELOW HERE /////////////////////////
-			//////////////////////////////////////////////////////////////////
-
-			// TODO 2 - Variable declarations 
-			var positionX = 0; 
-			var points = 0 
-			var speed = 10 
-			var positionY = 0;
-			var speedY = 10;
-			var boardHeight = jQuery(window).height();
-			var randNum = Math.random() * 100
-
-
-			/* 
+        /* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
-			function update() {
-				moveBoxTo(positionX, positionY); //moves box
-				positionX = positionX + speed; 
-				if(positionX > boardWidth){
-					speed = speed * -1;
-				}
-			else if (positionX < 0){
-				speed *= -1;
-			}
-			box.css("left", newPositionX);
-			box.css("top", newPositionY);
+        function update() {
+          positionX = positionX + speed;
+          if (positionX > boardWidth) {
+            speed = speed * -1;
+          } else if (positionX < 0) {
+            speed = speed * -1;
+          }
 
-			positionY = positionY + 10;
-				if(positionY > boardHeight){
-					speed = speed * -1;
-				}
-			else if (positionY < boardHeight){
-				speed *= -1;
-			}
+          positionY = positionY + speedY;
+          if (positionY > boardHeight) {
+            speedY = speedY * -1;
+          } else if (positionY < boardHeight) {
+            speedY = speedY * -1;
+          }
+          moveBoxTo(positionX, positionY); //moves box
+        }
 
-			  requestAnimationFrame(updateBox);
-
-			};
-
-			/* 
+        /* 
 			This Function will be called each time the box is clicked. Each time it is called,
 			it should increase the points total, increase the speed, and move the box to
 			the left side of the screen.
 			*/
-			function handleBoxClick() {
-				positionX = 0
-				points = points + 1
-				changeBoxText(points)
-				speed = 3 * points + 10; 
-				
-			
-
-
-			};
-
-
-
-
-
-		})();
-	</script>
-</body>
-
+        function handleBoxClick() {
+          positionX = 0;
+          points = points + 1;
+          changeBoxText(points);
+          speed = 3 * points + 10;
+        }
+      })();
+    </script>
+  </body>
 </html>
